--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
 body {
     padding: 50px;
-    background-color: #66CCFF;
+    background-color: black;
     font-family: sans-serif;
   }
   #container {
     display: flex;
     justify-content: center;
+    color: black;
   }
