--- a/src/ToDoList.css
+++ b/src/ToDoList.css
@@ -36,6 +36,12 @@
     border-radius: 5px;
     margin-bottom: 10px;
     width: fit-content;
+    display: inline-block;
+    margin-right: 10px;
+
+}
+.theList button{
+    display: inline-block;
 }
 ul.theList{
     padding: 0;
